[gd_scene load_steps=2 format=3 uid="uid://dacyugrkjb2o4"]

[ext_resource type="Script" path="res://scenes/gui/tireinfo_app.gd" id="1"]

[node name="TireInfoApp" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -150.0
offset_right = 100.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0.556863)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="WheelFL" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="TireWearLabel" type="Label" parent="Panel/VBoxContainer/HBoxContainer/WheelFL"]
layout_mode = 2
text = "0.0"
horizontal_alignment = 1

[node name="TireTemp" type="ColorRect" parent="Panel/VBoxContainer/HBoxContainer/WheelFL"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0.545098, 0.2, 1)

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer/WheelFL/TireTemp"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "20.0 c"

[node name="WheelFR" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="TireWearLabel" type="Label" parent="Panel/VBoxContainer/HBoxContainer/WheelFR"]
layout_mode = 2
text = "0.0"
horizontal_alignment = 1

[node name="TireTemp" type="ColorRect" parent="Panel/VBoxContainer/HBoxContainer/WheelFR"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0.545098, 0.2, 1)

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer/WheelFR/TireTemp"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "20.0 c"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="WheelBL" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2
alignment = 2

[node name="TireTemp" type="ColorRect" parent="Panel/VBoxContainer/HBoxContainer2/WheelBL"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0.545098, 0.2, 1)

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer2/WheelBL/TireTemp"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "20.0 c"

[node name="TireWearLabel" type="Label" parent="Panel/VBoxContainer/HBoxContainer2/WheelBL"]
layout_mode = 2
text = "0.0"
horizontal_alignment = 1

[node name="WheelBR" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2
alignment = 2

[node name="TireTemp" type="ColorRect" parent="Panel/VBoxContainer/HBoxContainer2/WheelBR"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0.545098, 0.2, 1)

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer2/WheelBR/TireTemp"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "20.0 c"

[node name="TireWearLabel" type="Label" parent="Panel/VBoxContainer/HBoxContainer2/WheelBR"]
layout_mode = 2
text = "0.0"
horizontal_alignment = 1
